<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Add your toolbar or any other app bar related components here if needed -->

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Your content views go here -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/having_issues"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/knowledgebase"
                android:textColor="#454545"
                android:lineSpacingExtra="4dp"
                android:layout_marginBottom="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/commonly_asked_questions"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_do_i_assemble_evee"
                android:textColor="#454545"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/howtopower"
                android:textColor="#454545"
                android:lineSpacingExtra="4dp"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/howtoconnect"
                android:textColor="#454545"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connectanswer"
                android:textColor="#454545"
                android:lineSpacingExtra="4dp"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/howtocontrol"
                android:textColor="#454545"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/controlanswer"
                android:textColor="#454545"
                android:lineSpacingExtra="4dp"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/howtolivefeed"
                android:textColor="#454545"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/livefeedanswer"
                android:textColor="#454545"
                android:lineSpacingExtra="4dp"
                android:layout_marginBottom="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questions"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_marginBottom="16dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:id="@+id/contact_us_button"
                android:layout_gravity="center_horizontal"
                android:onClick="sendEmail" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabScrollToTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/margin_16"
        android:src="@drawable/ic_arrow_upward"
        app:backgroundTint="@color/primary_color"
        app:rippleColor="#FFFFFF" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
